Bug 446041 - Clicking screencast tray icon should not stop recording
Summary: Clicking screencast tray icon should not stop recording
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.23.3
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-11-24 17:28 UTC by Villa Chodubski
Modified: 2022-07-20 21:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Villa Chodubski 2021-11-24 17:28:43 UTC
While recording screen on wayland there is a tray icon named *Recording screen "name_of_screen"* . Clicking it stops screensharing. This is very unexpected for 2 reasons:
 - Most of other icons in tray upon click invoke either a window with more options or open an applet. No action is done immediately.
 - Only way user would know clicking it will stop screensharing is by hovering over with a mouse and seeing tooltip.

The most expected behavior would be opening an applet which contains a button "Stop recording". It could also contain additional information such as: what is being recorded (window or full screen), how long since recording has started, what application is recording.
Comment 1 Nate Graham 2021-11-24 18:03:13 UTC
> The most expected behavior would be opening an applet which contains a button "Stop recording".
> It could also contain additional information such as: what is being recorded (window or full screen),
> how long since recording has started, what application is recording.
That seems reasonable to me.
Comment 2 Bug Janitor Service 2022-07-15 09:35:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/121
Comment 3 Harald Sitter 2022-07-20 10:28:22 UTC
Git commit 57f17b2df64cd67a419aba9f6d8ee0dd19b60c64 by Harald Sitter.
Committed on 20/07/2022 at 10:26.
Pushed by sitter into branch 'master'.

don't stop recording on click, use a contextmenu instead

previously it was super not obvious that clicking would stop the
recording. now it is.

M  +11   -2    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/57f17b2df64cd67a419aba9f6d8ee0dd19b60c64