don't stop recording on click, use a contextmenu instead

previously it was super not obvious that clicking would stop the
recording. now it is.

BUG: 446041